@@ -14,6 +14,7 @@ ver 0.17.2 (2012/??/??)
 * playlist: fix use-after-free bug
 * playlist: fix memory leak
 * state_file: save song priorities
+* player: disable cross-fading in "single" mode
 
 
 ver 0.17.1 (2012/07/31)
